# Codescribe

./: .gitignore  .gitmodules  AGENT.json  AGENT.md  AGENTS.md  Maplefile  NOTICE  README.rst  citation.cff  codescribe.md  pyproject.toml  setup.py  tests
code_scribe/: __meta__.py
code_scribe.rs/src/: commands.rs  main.rs
code_scribe/api/: _commands.py
code_scribe/cli/: _code_scribe.py  _commands.py
code_scribe/lib/: _click.py  _filetools.py  _llm.py
codescribe/: __meta__.py  code-scribe
codescribe.rs/: Makefile
codescribe.rs.dev/: Cargo.toml
codescribe.rs/src/: commands.rs  main.rs
codescribe/api/: _commands.py
codescribe/cli/: _code_scribe.py  _commands.py
codescribe/lib/: __init__.py  _agent.py  _click.py  _cmd.py  _diagnostics.py  _filetools.py  _llm.py  _logging.py  _loop.py  _textprotocol.py  _tools.py
deprecated/opencode/plugins/: csb_plugin_codescribe.ts
docs/: README.md  TODO.md  agent.md  architecture.md  cmd.md  loop.md  models.md  tools.md
opencode/: Makefile  README.md  package.json
opencode/agents/: codescribe.md  codescribe_executor.md  codescribe_planner.md  codescribe_reviewer.md  codescribe_router.md  codescribe_tester.md
opencode/agents/codescribe/: executor.md  planner.md
opencode/plugins/: codescribe_env_model.ts  codescribe_export_env.ts  csb_plugin_codescribe.ts
opencode/skills/codescribe_core/: SKILL.md
opencode/skills/codescribe_env/: SKILL.md
opencode/skills/csb_mode_tester/: SKILL.md
opencode/tools/: codescribe_codescribe.ts  codescribe_model.ts  codescribe_shell.ts
requirements/: agentic.txt  core.txt
(+9 files in other folders)
