[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Codescribe"
version = "2026.dev"
authors = [{ name = "Codescribe Contributors" }]
description = "Coding Agent and Translation Utility"
license = { text = "Apache 2.0" }
readme = "README.rst"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "click",
    "requests",
    "toml",
    "pyyaml",
    "alive-progress==3.1.4",
    "openai",
    "anthropic",
]

[project.optional-dependencies]
transformers = ["torch", "transformers"]

[project.scripts]
code-scribe = "codescribe.cli:code_scribe"

[tool.setuptools.packages.find]
where = ["."]
